<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:fontFamily="monospace"
            android:text="@string/title_paired_devices"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:minHeight="30dp"
            android:gravity="center"
            android:visibility="visible" />

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:stackFromBottom="true" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_light_background"
            android:fontFamily="monospace"
            android:text="@string/title_other_devices"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone"


            />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:stackFromBottom="true"
            android:visibility="visible" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_scan" />

</LinearLayout>